Add FSE columns

--- a/frontend/src/assets/locales/en/finalSupplyEquipment.json
+++ b/frontend/src/assets/locales/en/finalSupplyEquipment.json
@@ -28,14 +28,18 @@
   "finalSupplyEquipmentColLabels": {
     "complianceReportId": "Compliance Report ID",
     "supplyFrom": "Supply date range",
+    "kwhUsage":"kWh usage",
     "supplyFromDate": "Dates of supply from",
     "supplyToDate": "Dates of supply to",
     "registrationNbr": "Registration #",
     "serialNbr": "Serial #",
     "manufacturer": "Manufacturer",
+    "model":"Model",
     "levelOfEquipment": "Level of equipment",
+    "ports":"Ports",
     "fuelMeasurementType": "Fuel measurement type",
     "intendedUses": "Intended use",
+    "intendedUsers": "Intended users",
     "streetAddress": "Street address",
     "city": "City",
     "postalCode": "Postal code",
