--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -81,7 +81,7 @@
     {
       "header": "Exemption",
       "content": [
-        "<p>To determine if an organization is eligible for an exemption, see the Information Bulletin RLCF-005: Exemption Report. To apply for an exemption, complete the Exemption Report Form, which can be found on our website at <a href='https://www.gov.bc.ca/lowcarbonfuels'>www.gov.bc.ca/lowcarbonfuels</a>. Exemption reports may be submitted via email to <a href='mailto:lcfs@gov.bc.ca'>lcfs@gov.bc.ca</a>.</p>"
+        "<p>To determine if an organization is eligible for an exemption, see the <i>Information Bulletin RLCF-005: Exemption Report</i>. To apply for an exemption, complete the Exemption Report Form, which can be found on our website at <a href='https://www.gov.bc.ca/lowcarbonfuels'>www.gov.bc.ca/lowcarbonfuels</a>. Exemption reports may be submitted via email to <a href='mailto:lcfs@gov.bc.ca'>lcfs@gov.bc.ca</a>.</p>"
       ]
     },
     {
