--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -91,19 +91,19 @@
       ]
     },
     {
-      "header": "Export of Supply",
+      "header": "Export of supply",
       "content": [
         "<p>Any fuel reported as supplied but later transferred out of BC must be reported in a compliance report as a reportable export under section 8 of the Low Carbon Fuels Act.</p>"
       ]
     },
     {
-      "header": "Audits of Reports",
+      "header": "Audits of reports",
       "content": [
         "<p>Responsible parties must keep sufficient records to verify and evaluate any reports and information submitted to the director. Under section 34 of the Low Carbon Fuels Act, the director can require an organization that submits a report to have the report audited by a designated inspector to verify compliance with the legislation. Any inconsistencies noted during the audit are deemed contraventions under the Low Carbon Fuels Act and may be subject to penalty after substantiation.</p>"
       ]
     },
     {
-      "header": "About This Form",
+      "header": "About this form",
       "content": [
         "<p>Due to administrative and legislative changes, the values and calculations presented in this report before submission are for informational purposes only and are subject to change without prior notice. The Declaration & Summary section of this Compliance Report consolidates information from the other schedules of this report. Please refer to the User Guide provided for navigation instructions. The Low Carbon Fuels Act, Low Carbon Fuels (General) Regulation, and Low Carbon Fuels (Technical) Regulation are available online at <a href='http://www.bclaws.ca'>http://www.bclaws.ca</a>.</p>"
       ]
