feat: Consolidate Compliance Cards
* Remove important info and file upload
* Remove org info
* Merge all into AssessmentCard

# Conflicts:
#	backend/poetry.lock

--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -19,10 +19,10 @@
   "assessment": "Assessment",
   "assessmentLn1": "{{name}} <strong>{{hasMet}}</strong> renewable fuel targets set under section 9 of the <i>Low Carbon Fuels Act.</i>",
   "assessmentLn2": "{{name}} <strong>{{hasMet}}</strong> the low carbon fuel targets set under section 12 of the <i>Low Carbon Fuels Act.</i>",
-  "impInfoTitle": "Important information",
-  "impInfo": "If you become aware that this report is incomplete or inaccurate, you must submit a supplemental report within 30 days.",
+  "supplementalWarning": "If you become aware that this report is incomplete or inaccurate, you must submit a supplemental report within 30 days.",
   "supplementalReport": "Supplemental Report",
   "createSupplementalRptBtn": "Create supplemental report",
+  "createReassessmentBtn": "Create reassessment",
   "supplementalCreated": "Supplemental report created successfully.",
   "clickDrag": "Drag and drop your (PDF, JPG, PNG, MSG, DOC, XLS) file(s) here or click to select the file(s) from your machine to upload.",
   "activityLinksList": "Click links to report activities",
@@ -67,6 +67,8 @@
   "summary": "Summary",
   "addRenewableFuelRetention": "Add a renewable fuel retention or obligation deferral",
   "errorRetrieving": "Error retrieving the record",
+  "renewableFuelTarget": "Renewable fuel target",
+  "lowCarbonFuelTarget": "Low carbon fuel target",
   "renewableFuelTargetSummary": "Renewable fuel target summary",
   "lowCarbonFuelTargetSummary": "Low carbon fuel target summary",
   "nonCompliancePenaltySummary": "Non-compliance penalty payable summary",
