feat: Add Content to energy labels on FS and FSE

--- a/frontend/src/assets/locales/en/fuelSupply.json
+++ b/frontend/src/assets/locales/en/fuelSupply.json
@@ -15,7 +15,7 @@
     "fuelSupplyId": "Fuel supply ID",
     "fuelType": "Fuel type",
     "fuelTypeOther": "Fuel type other",
-    "fuelCategory": "Fuel catgory",
+    "fuelCategory": "Fuel category",
     "endUse": "End use",
     "provisionOfTheAct": "Determining carbon intensity",
     "fuelCode": "Fuel code",
@@ -26,7 +26,7 @@
     "ciOfFuel": "CI of fuel",
     "energyDensity": "Energy density",
     "eer": "EER",
-    "energy": "Energy",
+    "energy": "Energy Content",
     "determiningCarbonIntensity": "Determining carbon intensity"
   },
   "validateMsg": {
