--- a/frontend/src/assets/locales/en/fuelExport.json
+++ b/frontend/src/assets/locales/en/fuelExport.json
@@ -26,7 +26,7 @@
     "ciOfFuel": "CI of fuel",
     "energyDensity": "Energy density",
     "eer": "EER",
-    "energy": "Energy",
+    "energy": "Energy Content",
     "determiningCarbonIntensity": "Determining carbon intensity"
   },
   "validateMsg": {
