Remove reasons from disclaimer text
* Update cypress tests

--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -25,7 +25,7 @@
   "layout": {
     "breadCrumbHome": "Home",
     "disclaimer": {
-      "part1": "For security and privacy reasons, please don't share personal information on this website.",
+      "part1": "For security and privacy, please don't share personal information on this website.",
       "part2": "This information does not replace or constitute legal advice. Users are responsible for ensuring compliance with the Low Carbon Fuels Act and Regulations."
     }
   },
