Add Fuel code, CI of Fuel and Determining Carbon Intensity to other use

--- a/frontend/src/assets/locales/en/otherUses.json
+++ b/frontend/src/assets/locales/en/otherUses.json
@@ -25,10 +25,13 @@
     "complianceReportId": "Compliance Report ID",
     "fuelType": "Fuel Type",
     "fuelCategory": "Fuel Category",
+    "provisionOfTheAct": "Determining carbon intensity",
+    "fuelCode": "Fuel code",
     "quantitySupplied": "Quantity Supplied",
     "addressForService": "Address For Service",
     "legalName": "Legal Name",
     "units": "Units",
+    "ciOfFuel": "CI of fuel",
     "expectedUse": "Expected Use",
     "otherExpectedUse": "If other, enter expected use",
     "rationale": "Rationale",
