--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -7,12 +7,12 @@
   "fuelCodeLoadFailMsg": "Failed to load fuel code information.",
   "newFuelCodeTitle": "Add new fuel code(s)",
   "editFuelCodeTitle": "Edit draft fuel code",
+  "viewFuelCodeTitle": "View fuel code",
   "approvedFuelCodeTitle": "Approved draft fuel code",
   "deletedFuelCodeTitle": "Deleted draft fuel code",
   "fuelCodeAddSuccessMsg": "Fuel code(s) added successfully.",
   "fuelCodeDeleteSuccessMsg": "Fuel code deleted successfully.",
   "fuelCodeAddFailMsg": "Failed to add fuel code(s).",
-  "saveDraftBtn": "Save draft code",
   "deleteFuelCodeBtn": "Delete Code",
   "deleteFuelCode": "Delete Fuel Code",
   "deleteConfirmText": "Are you sure you want to delete this fuel code?",
