--- a/frontend/src/assets/locales/en/otherUses.json
+++ b/frontend/src/assets/locales/en/otherUses.json
@@ -22,22 +22,22 @@
   "addRow": "Add row",
   "rows": "rows",
   "otherUsesColLabels": {
-    "complianceReportId": "Compliance Report ID",
-    "fuelType": "Fuel Type",
-    "fuelCategory": "Fuel Category",
-    "quantitySupplied": "Quantity Supplied",
-    "addressForService": "Address For Service",
-    "legalName": "Legal Name",
+    "complianceReportId": "Compliance report ID",
+    "fuelType": "Fuel type",
+    "fuelCategory": "Fuel category",
+    "quantitySupplied": "Quantity supplied",
+    "addressForService": "Address for service",
+    "legalName": "Legal name",
     "units": "Units",
-    "expectedUse": "Expected Use",
+    "expectedUse": "Expected use",
     "otherExpectedUse": "If other, enter expected use",
     "rationale": "Rationale",
     "lastUpdated": "Last updated",
     "status": "Status",
     "useId": "Use ID",
     "date": "Date",
-    "fromAccount": "From Account",
-    "toAccount": "To Account",
+    "fromAccount": "From account",
+    "toAccount": "To account",
     "comments": "Comments"
   },
   "validateMsg": {
