--- a/frontend/src/assets/locales/en/otherUses.json
+++ b/frontend/src/assets/locales/en/otherUses.json
@@ -22,14 +22,17 @@
   "addRow": "Add row",
   "rows": "rows",
   "otherUsesColLabels": {
-    "complianceReportId": "Compliance report ID",
-    "fuelType": "Fuel type",
-    "fuelCategory": "Fuel category",
-    "quantitySupplied": "Quantity supplied",
-    "addressForService": "Address for service",
-    "legalName": "Legal name",
+    "complianceReportId": "Compliance Report ID",
+    "fuelType": "Fuel Type",
+    "fuelCategory": "Fuel Category",
+    "provisionOfTheAct": "Determining carbon intensity",
+    "fuelCode": "Fuel code",
+    "quantitySupplied": "Quantity Supplied",
+    "addressForService": "Address For Service",
+    "legalName": "Legal Name",
     "units": "Units",
-    "expectedUse": "Expected use",
+    "ciOfFuel": "CI of fuel",
+    "expectedUse": "Expected Use",
     "otherExpectedUse": "If other, enter expected use",
     "rationale": "Rationale",
     "lastUpdated": "Last updated",
