--- a/frontend/src/assets/locales/en/otherUses.json
+++ b/frontend/src/assets/locales/en/otherUses.json
@@ -22,17 +22,17 @@
   "addRow": "Add row",
   "rows": "rows",
   "otherUsesColLabels": {
-    "complianceReportId": "Compliance Report ID",
-    "fuelType": "Fuel Type",
-    "fuelCategory": "Fuel Category",
+    "complianceReportId": "Compliance report ID",
+    "fuelType": "Fuel type",
+    "fuelCategory": "Fuel category",
     "provisionOfTheAct": "Determining carbon intensity",
     "fuelCode": "Fuel code",
-    "quantitySupplied": "Quantity Supplied",
-    "addressForService": "Address For Service",
-    "legalName": "Legal Name",
+    "quantitySupplied": "Quantity supplied",
+    "addressForService": "Address for service",
+    "legalName": "Legal name",
     "units": "Units",
     "ciOfFuel": "CI of fuel",
-    "expectedUse": "Expected Use",
+    "expectedUse": "Expected use",
     "otherExpectedUse": "If other, enter expected use",
     "rationale": "Rationale",
     "lastUpdated": "Last updated",
