Update Fuel Code Column Labels

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -41,10 +41,10 @@
     "feedstockLocation": "Feedstock location",
     "misc": "Misc (e.g. CCS, EOR, waste steam, non rendered, etc.,)",
     "fuelProductionFacilityCity": "Fuel production facility city",
-    "fuelProductionFacilityProvinceState": "FP facility province/state",
-    "fuelProductionFacilityCountry": "FP facility country",
+    "fuelProductionFacilityProvinceState": "Fuel production facility province/state",
+    "fuelProductionFacilityCountry": "Fuel production facility country",
     "facilityNameplateCapacity": "Facility nameplate capacity",
-    "facilityNameplateCapacityUnit": "Unit",
+    "facilityNameplateCapacityUnit": "Facility nameplate capacity unit",
     "feedstockFuelTransportMode": "Feedstock transport mode",
     "finishedFuelTransportMode": "Finished fuel transport mode",
     "formerCompany": "Former company",
