feat: Add UCI to Fuel Supply and Fuel Export

--- a/frontend/src/assets/locales/en/fuelExport.json
+++ b/frontend/src/assets/locales/en/fuelExport.json
@@ -24,6 +24,7 @@
     "complianceUnits": "Compliance units",
     "targetCI": "Target CI",
     "ciOfFuel": "CI of fuel",
+    "uci": "UCI",
     "energyDensity": "Energy density",
     "eer": "EER",
     "energy": "Energy Content",
