feat: implement notifications settings page for IDIR and BCeID roles

--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -42,5 +42,6 @@
   "FuelCodes": "Fuel codes",
   "lcfsEmail": "lcfs@gov.bc.ca",
   "scrollToTop": "Scroll to top",
-  "scrollToBottom": "Scroll to bottom"
+  "scrollToBottom": "Scroll to bottom",
+  "Notifications": "Notifications"
 }
