feat: Add sorting and filtering to Fuel Codes
* Hook up filtering and sorting methods
* Setup backend filtering lgic
* Change SetFilter to use custom so it avoids ag-grid filtering
* Don't convert filters to int so we can preserve float values

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -36,7 +36,7 @@
     "approvalDate": "Approval date",
     "effectiveDate": "Effective date",
     "expiryDate": "Expiry date",
-    "fuel": "Fuel",
+    "fuelType": "Fuel",
     "feedstock": "Feedstock",
     "feedstockLocation": "Feedstock location",
     "misc": "Misc (e.g. CCS, EOR, waste steam, non rendered, etc.,)",
