feat: add instructional text for zero-dollar credit transfers

--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -80,5 +80,6 @@
     "Refused": "Refused",
     "Declined": "Declined",
     "Rescinded": "Rescinded"
-  }
+  },
+  "zeroDollarInstructionText": "If proposing a zero-dollar transfer, use the comment box below to provide an explanation for this value."
 }
