feat: Add schema validation to fuel code dates
* Fix existing rule for nameplate and nameplate capacity, use much simpler after validator
* Add tests

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -35,7 +35,7 @@
     "applicationDate": "Application date",
     "approvalDate": "Approval date",
     "effectiveDate": "Effective date",
-    "expiryDate": "Expiry date",
+    "expirationDate": "Expiry date",
     "fuel": "Fuel",
     "feedstock": "Feedstock",
     "feedstockLocation": "Feedstock location",
