Error validation message labels in AG Grid

--- a/frontend/src/assets/locales/en/fuelExport.json
+++ b/frontend/src/assets/locales/en/fuelExport.json
@@ -12,12 +12,12 @@
   "fuelExportColLabels": {
     "complianceReportId": "Compliance Report ID",
     "fuelExportId": "Fuel export ID",
-    "fuelType": "Fuel type",
+    "fuelTypeId": "Fuel type",
     "exportDate": "Export date",
     "fuelTypeOther": "Fuel type other",
-    "fuelCategory": "Fuel catgory",
+    "fuelCategoryId": "Fuel catgory",
     "endUse": "End use",
-    "provisionOfTheAct": "Determining carbon intensity",
+    "provisionOfTheActId": "Determining carbon intensity",
     "fuelCode": "Fuel code",
     "quantity": "Quantity supplied",
     "units": "Units",
