--- a/frontend/src/assets/locales/en/fuelSupply.json
+++ b/frontend/src/assets/locales/en/fuelSupply.json
@@ -17,7 +17,7 @@
     "fuelTypeOther": "Fuel type other",
     "fuelCategory": "Fuel category",
     "endUse": "End use",
-    "provisionOfTheAct": "Determining carbon intensity",
+    "provisionOfTheActId": "Determining carbon intensity",
     "fuelCode": "Fuel code",
     "quantity": "Quantity supplied",
     "units": "Units",
