fix: Data and Label Fixes
* Change hydrogen to kg
* Relabel allocation agreement transaciton types
* Rename first column to Responsibility
* Add $ infront of CAD

--- a/frontend/src/assets/locales/en/allocationAgreement.json
+++ b/frontend/src/assets/locales/en/allocationAgreement.json
@@ -4,7 +4,7 @@
   "addAllocationAgreementRowsTitle": "Allocation agreements (e.g., allocating responsibility for fuel)",
   "allocationAgreementSubtitle": "Enter allocation agreement details below",
   "allocationAgreementColLabels": {
-    "transaction": "Transaction",
+    "transaction": "Responsibility",
     "transactionPartner": "Legal name of transaction partner",
     "postalAddress": "Address for service",
     "transactionPartnerEmail": "Email",
