Fix: LCFS Bug ag-grid copy paste function

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -37,6 +37,7 @@
     "effectiveDate": "Effective date",
     "expiryDate": "Expiry date",
     "fuel": "Fuel",
+    "fuelTypeId": "Fuel type id",
     "feedstock": "Feedstock",
     "feedstockLocation": "Feedstock location",
     "misc": "Misc (e.g. CCS, EOR, waste steam, non rendered, etc.,)",
