--- a/frontend/src/assets/locales/en/finalSupplyEquipment.json
+++ b/frontend/src/assets/locales/en/finalSupplyEquipment.json
@@ -27,7 +27,7 @@
   "rows": "rows",
   "finalSupplyEquipmentColLabels": {
     "complianceReportId": "Compliance Report ID",
-    "organization": "Organization",
+    "organizationName": "Organization",
     "supplyFrom": "Supply date range",
     "kwhUsage":"kWh usage",
     "supplyFromDate": "Dates of supply from",
