refactor: reformat organizations and user management to material card design

--- a/frontend/src/assets/locales/en/admin.json
+++ b/frontend/src/assets/locales/en/admin.json
@@ -22,6 +22,8 @@
   "usersNotFound": "No users found",
   "activitiesNotFound": "No user activities found",
   "newUserBtn": "New user",
+  "userDetails": "User details",
+  "editBtn": "Edit",
   "userColLabels": {
     "userName": "User name",
     "role": "Role(s)",
