--- a/frontend/src/assets/locales/en/otherUses.json
+++ b/frontend/src/assets/locales/en/otherUses.json
@@ -21,6 +21,7 @@
   "approveConfirmText": "Are you sure you want to approve this other use entry?",
   "addRow": "Add row",
   "rows": "rows",
+  "fuelCodeFieldRequiredError": "Error updating row: Fuel code field required",
   "otherUsesColLabels": {
     "complianceReportId": "Compliance report ID",
     "fuelType": "Fuel type",
