feat: Add Legacy Report View
* Add new brancher to control legacy vs non-legacy view
* Split HistoryCard to its own component for re-usability and add tests
* Update legacy view with legacy assessment card
* Sent legacy_id to the front end

--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -158,5 +158,6 @@
     "totalValue": "Total Value"
   },
   "summaryLoadingMsg": "Loading compliance report summary...",
-  "noSigningAuthorityTooltip": "Signing authority role required."
+  "noSigningAuthorityTooltip": "Signing authority role required.",
+  "viewLegacyBtn": "View Full Historical Report in TFRS"
 }
