Feat: LCFS - Add a Return report to the supplier button #1507

--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -39,17 +39,19 @@
     "submitReportBtn": "Submit report",
     "returnToAnalyst": "Return to analyst",
     "returnToManager": "Return to compliance manager",
+    "returnToSupplier": "Return report to the supplier",
     "recommendReportAnalystBtn": "Recommend to compliance manager",
     "recommendReportManagerBtn": "Recommend to director",
     "assessReportBtn": "Issue assessment",
     "reAssessReportBtn": "Re-assess report"
   },
-  "savedSuccessText": "Compliance report successfully saved",
+  "savedSuccessText": "Compliance report successfully {{status}}",
   "submitConfirmText": "Are you sure you want to sign and submit this compliance report?",
   "deleteConfirmText": "Are you sure you want to delete this compliance report?",
   "recommendConfirmText": "Are you sure you want to recommend this compliance report?",
   "returnToAnalystConfirmText": "Are you sure you want to return this compliance report back to analyst?",
   "returnToManagerConfirmText": "Are you sure you want to return this compliance report back to compliance manager?",
+  "returnToSupplierConfirmText": "Are you sure you want to return this compliance report back to the supplier?",
   "assessConfirmText": "Are you sure you want to assess this compliance report?",
   "uploadLabel": "Upload supporting documents for your report.",
   "introduction": "Introduction",
