--- a/frontend/src/assets/locales/en/fuelExport.json
+++ b/frontend/src/assets/locales/en/fuelExport.json
@@ -12,11 +12,11 @@
   "fuelExportColLabels": {
     "complianceReportId": "Compliance Report ID",
     "fuelExportId": "Fuel export ID",
-    "fuelType": "Fuel type",
+    "fuelTypeId": "Fuel type",
     "exportDate": "Export date",
     "fuelTypeOther": "Fuel type other",
-    "fuelCategory": "Fuel catgory",
-    "endUse": "End use",
+    "fuelCategoryId": "Fuel category",
+    "endUseId": "End use",
     "provisionOfTheActId": "Determining carbon intensity",
     "fuelCode": "Fuel code",
     "quantity": "Quantity supplied",
