--- a/frontend/src/assets/locales/en/allocationAgreement.json
+++ b/frontend/src/assets/locales/en/allocationAgreement.json
@@ -5,7 +5,7 @@
   "allocationAgreementSubtitle": "Enter allocation agreement details below",
   "fuelCodeFieldRequiredError": "Error updating row: Fuel code field required",
   "allocationAgreementColLabels": {
-    "transaction": "Responsibility",
+    "allocationTransactionType": "Responsibility",
     "transactionPartner": "Legal name of transaction partner",
     "postalAddress": "Address for service",
     "transactionPartnerEmail": "Email",
