clear filters button for all components except User Activity.

--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -49,5 +49,6 @@
     "message": "Sorry, you do not have permission to access this page.",
     "contact": "Contact your LCFS or BCeID administrator or contact",
     "email": "lcfs@gov.bc.ca"
-  }
+  },
+  "ClearFilters": "Clear filters"
 }
