--- a/frontend/src/assets/locales/en/admin.json
+++ b/frontend/src/assets/locales/en/admin.json
@@ -81,5 +81,11 @@
     "signing_authority": "can sign and submit compliance reports to government and transfers to trade partners/government.",
     "read_only": "can view transactions, compliance reports and files.",
     "optional": "optional"
+  },
+  "userActivity":{
+    "actionTaken": "Action taken",
+    "transactionType": "Transaction type",
+    "transactionId": "Transaction ID",
+    "date": "Date"
   }
 }
