fix: Remove active filter button from Org page
* Use table filters instead

--- a/frontend/src/assets/locales/en/organization.json
+++ b/frontend/src/assets/locales/en/organization.json
@@ -16,8 +16,6 @@
   "newUsrBtn": "New user",
   "orgDownloadBtn": "Download organization information",
   "userDownloadBtn": "Download user information",
-  "active": "Active",
-  "inctive": "Inactive",
   "legalNameLabel": "Legal name of organization",
   "operatingNameLabel": "Operating name of organization",
   "sameAsLegalNameLabel": "Same as legal name",
@@ -35,11 +33,8 @@
   "cntryLabel": "Country",
   "bcAddrLabel": "Address in B.C. (at which records are maintained)",
   "sameAddrLabel": "Same as address for service",
-  "contactMsg": "to update address informations.",
-  "activeUsersBtn": "Active users",
-  "inactiveUsersBtn": "Inactive users",
-  "showInactiveUsersBtn": "Show inactive users",
-  "showActiveUsersBtn": "Show active users",
+  "contactMsg": "to update address information.",
+  "usersLabel": "Users",
   "addOrgBtn": "Add organization",
   "addOrgTitle": "Add organization",
   "editOrgTitle": "Edit organization",
