--- a/frontend/src/assets/locales/en/finalSupplyEquipment.json
+++ b/frontend/src/assets/locales/en/finalSupplyEquipment.json
@@ -1,8 +1,11 @@
 {
   "fseTitle": "Final supply equipment (FSE)",
-  "addFSErowsTitle": "Add new final supply equipment(s) (FSE)",
-  "fseSubtitle": "Report dates of supply for your FSE. If your billing location is different from your equipment location provided below use the Notes field. Use the Notes field if you use any Other options.",
-  "reportingResponsibilityInfo": "If you are reporting on behalf of an FSE for which you hold allocated reporting responsibility, please list the utility account holder's organization name associated with the specific station, rather than your own organization's name.",
+  "addFSErowsTitle": "Final supply equipment",
+  "reportingResponsibilityInfo": [
+    "Report dates of supply for your final supply equipment (FSE).",
+    "<strong>Organization:</strong> Enter your organization name unless you are reporting FSE that you have received allocated responsibility. In this case, enter the utility account holder's organization name.",
+    "Enter the billing address in the <strong>Notes</strong> field if it is different than the equipment address. Also, enter an explanation in the <strong>Notes</strong> field if you select <i>'Other'</i> from any of the select options."
+  ],
   "newFinalSupplyEquipmentBtn": "New final supply equipment",
   "noFinalSupplyEquipmentsFound": "No final supply equipments found",
   "finalSupplyEquipmentDownloadBtn": "Download as Excel",
@@ -30,15 +33,15 @@
     "complianceReportId": "Compliance Report ID",
     "organizationName": "Organization",
     "supplyFrom": "Supply date range",
-    "kwhUsage":"kWh usage",
+    "kwhUsage": "kWh usage",
     "supplyFromDate": "Dates of supply from",
     "supplyToDate": "Dates of supply to",
     "registrationNbr": "Registration #",
     "serialNbr": "Serial #",
     "manufacturer": "Manufacturer",
-    "model":"Model",
+    "model": "Model",
     "levelOfEquipment": "Level of equipment",
-    "ports":"Ports",
+    "ports": "Ports",
     "fuelMeasurementType": "Fuel measurement type",
     "intendedUses": "Intended use",
     "intendedUsers": "Intended users",
