--- a/frontend/src/assets/locales/en/notionalTransfer.json
+++ b/frontend/src/assets/locales/en/notionalTransfer.json
@@ -7,7 +7,8 @@
   "notionalTransferDownloadFailMsg": "Failed to download notional transfer information.",
   "LoadFailMsg": "Failed to load notional transfer rows.",
   "notionalTransferLoadFailMsg": "Failed to load notional transfer information.",
-  "newNotionalTransferTitle": "Add new notional transfer(s)",
+  "newNotionalTransferTitle": "Notional transfer of eligible renewable fuels",
+  "newNotionalTransferGuide": "Report renewable fuel volumes that you received or transferred through a notional transfer.",
   "editNotionalTransferTitle": "Edit draft notional transfer",
   "approvedNotionalTransferTitle": "Approved draft notional transfer",
   "deletedNotionalTransferTitle": "Deleted draft notional transfer",
