--- a/frontend/src/assets/locales/en/otherUses.json
+++ b/frontend/src/assets/locales/en/otherUses.json
@@ -6,7 +6,8 @@
   "otherUsesDownloadingMsg": "Downloading other uses information",
   "otherUsesDownloadFailMsg": "Failed to download other uses information.",
   "otherUsesLoadFailMsg": "Failed to load other uses information.",
-  "newOtherUsesTitle": "Add new other use(s)",
+  "newOtherUsesTitle": "Fuels for other use",
+  "newOtherUsesGuide": "Report fuel volumes that you supplied for heating or other prescribed uses other than transportation.",
   "editOtherUsesTitle": "Edit other use entry",
   "approvedOtherUsesTitle": "Approved other use entry",
   "deletedOtherUsesTitle": "Deleted other use entry",
