--- a/frontend/src/assets/locales/en/fuelExport.json
+++ b/frontend/src/assets/locales/en/fuelExport.json
@@ -1,8 +1,8 @@
 {
   "fuelExportTitle": "Export fuel",
   "noFuelExportsFound": "No fuel exports found",
-  "addFuelExportRowsTitle": "Add new fuel export",
-  "fuelExportSubtitle": "You must report fuel that was marketed or supplied in B.C. and then exported out of the province. Only negative compliance units (debits) can be issued, credits cannot be issued for exported fuel.",
+  "addFuelExportRowsTitle": "Export fuels",
+  "fuelExportGuide": "Report fuel volumes that were marketed or supplied in B.C. and then exported out of the province. Only negative compliance units (debits) can be issued, credits cannot be issued for exported fuel.",
   "fuelExportDownloadBtn": "Download as Excel",
   "fuelExportDownloadingMsg": "Downloading export fuels information",
   "fuelExportDownloadFailMsg": "Failed to download export fuel information.",
