--- a/frontend/src/assets/locales/en/fuelSupply.json
+++ b/frontend/src/assets/locales/en/fuelSupply.json
@@ -1,8 +1,8 @@
 {
-  "fuelSupplyTitle": "Supply of fuels",
+  "fuelSupplyTitle": "Supply of fuel",
   "noFuelSuppliesFound": "No fuel supplies found",
   "addFuelSupplyRowsTitle": "Add new supply of fuel",
-  "fuelSupplySubtitle": "Report the fuel volumes supplied for various uses.",
+  "fuelSupplyGuide": "Report fuel volumes you supplied for the various end uses.",
   "fuelSupplyDownloadBtn": "Download as Excel",
   "fuelSupplyDownloadingMsg": "Downloading supply of fuels information",
   "fuelSupplyDownloadFailMsg": "Failed to download supply of fuel information.",
