--- a/frontend/src/assets/locales/en/fuelSupply.json
+++ b/frontend/src/assets/locales/en/fuelSupply.json
@@ -16,7 +16,7 @@
     "fuelType": "Fuel type",
     "fuelTypeOther": "Fuel type other",
     "fuelCategoryId": "Fuel category",
-    "endUseId": "End use",
+    "endUse": "End use",
     "provisionOfTheActId": "Determining carbon intensity",
     "fuelCode": "Fuel code",
     "quantity": "Quantity supplied",
