feat: Add CR Transactions to Transactions view
* Pass description to store the nickname
* Update materialized view with new union on compliance reports
* Rename Id -> ID

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -23,7 +23,7 @@
   "addRow": "Add row",
   "rows": "rows",
   "fuelCodeColLabels": {
-    "fuelCodeId": "Fuel Code Id",
+    "fuelCodeId": "Fuel Code ID",
     "status": "Status",
     "prefix": "Prefix",
     "fuelSuffix": "Iteration",
